--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Labo 2/Sources/Lab 2 - Ex 2/dist/*
 Labo 2/Sources/Lab 2 - Ex 1/nbproject*
 Labo 2/Sources/Lab 2 - Ex 2/nbproject*
 Labo 2/Sources/Lab 2 - Ex 3/nbproject*
+Lab 4/largeEWD.txt
