--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,6 @@ Labo 2/Sources/Lab 2 - Ex 2/nbproject*
 Labo 2/Sources/Lab 2 - Ex 3/nbproject*
 Labo 5/Debug
 Labo 5/Release
+Labo 5/Labo 5.*
 *.o
 *.o.d
